1.增加redis配置 2.重构
